--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/StickyNote.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/StickyNote.uss
@@ -1,8 +1,7 @@
 .sticky-note
 {
     flex-direction:column;
-    align-items:stretch;    
-    background-color:#F6FF9A;
+    align-items:stretch;
     layer:100;
     border-radius:0;
     margin-bottom: 0;
@@ -10,6 +9,11 @@
     border-top-width:0;
     border-bottom-width:0;
     border-right-width:0;
+}
+
+.sticky-note, * TextField
+{
+    background-color:#F6FF9A;
 }
 
 .sticky-note .resizer
@@ -23,21 +27,27 @@
     text-color:#000000;
 }
 
-.sticky-note > #node-border
+* > #node-border
 {
     flex:1;
     flex-direction:column;
     align-items:stretch;   
 }
 
+
 * #title, * #title * 
 {
     font-size:20;
 }
-* #contents, * #content * 
+* #contents, * #contents * 
 {
     font-size:11;
     word-wrap:true;
+}
+
+* #title
+{
+    height:5;
 }
 
 * #title.not-empty
@@ -61,15 +71,48 @@
     margin-right:0;
     margin-top:0;
     margin-bottom:0;
+    background-image:none;
 }
+
+* Label
+{
+    border-top-width:1;
+    border-left-width:1;
+    border-right-width:1;
+    border-bottom-width:1;
+    border-top: 1;
+    border-left: 1;
+    border-right: 1;
+    border-bottom: 1;
+    margin-left:1;
+    margin-right:1;
+    margin-top:1;
+    margin-bottom:1;
+    -border-color: rgba(0, 0, 0, 0.5);
+}
+
+* Label:hover
+{
+    border-color: rgba(68,192,255, 0.5);
+}
+
+* TextField:hover
+{
+    background-image:none;
+}
+
+* TextField:focus
+{
+    background-image:none;
+}
+
+* TextField:focus:hover
+{
+    background-image:none;
+}
+
 * #title TextField
 {
     height:24;
-}
-
-* #title TextField:focus
-{
-    position-type: relative;
-    height:15;
 }
 
