wrong color for outputs context (not FF00FF)

--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXContext.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXContext.uss
@@ -27,7 +27,7 @@ VFXContextUI > #node-border
 
 VFXContextUI.outputTypenone > #node-border
 {
-    end-color:#FF00FF;
+    end-color:#C24F30;
 }
 
 
