--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXFlow.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXFlow.uss
@@ -1,5 +1,4 @@
-VFXFlowAnchor.EdgeConnector {
-}
+
 
 VFXFlowAnchor #connector #hole #cap{
 	width:0;
@@ -16,7 +15,7 @@ VFXFlowAnchor.port.EdgeConnector
     padding-right:0;
 	margin-left:12;
     margin-right:12;
-	-width:14;
+	width:100;
 	height:28;
     port-color:rgb(220, 220, 220);
 	flex-direction:column-reverse;
@@ -36,8 +35,12 @@ VFXFlowAnchor.port.EdgeConnector #connector
     margin-right:2;
 }
 
-VFXFlowAnchor.port.EdgeConnector #title
+VFXFlowAnchor.port.EdgeConnector #type
 {
+	position-type:Absolute;
+	width:42;
+	position-top:1;
+	position-left:58;
 	margin-left:0;
 	margin-right:0;
 }
