--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/StickyNote.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/StickyNote.uss
@@ -1,5 +1,7 @@
 .sticky-note
 {
+    min-height:100;
+    min-width:80;
     position-type:absolute;
     flex-direction:column;
     align-items:stretch;
@@ -72,16 +74,15 @@
 
 * #title
 {
-    height:2;
     margin-top:0;
     margin-bottom:0;
     padding-top:0;
     padding-bottom:0;
 }
 
-* #title.not-empty,* #title TextField
+* #title.empty
 {
-    height:24;
+    height:2;
 }
 
 * #contents
@@ -100,6 +101,10 @@
     margin-right:0;
     margin-top:0;
     margin-bottom:0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
     background-image:none;
 }
 
@@ -113,10 +118,12 @@
     border-left: 1;
     border-right: 1;
     border-bottom: 1;
-    margin-left:1;
-    margin-right:1;
+    margin-left:6;
+    margin-right:6;
     margin-top:1;
     margin-bottom:1;
+    padding-left:0;
+    padding-right:0;
     -border-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -146,21 +153,6 @@
 .size-huge #contents, .size-huge #contents * 
 {
     font-size:56;
-}
-
-.size-medium #title.not-empty,.size-medium #title TextField
-{
-    height:44;
-}
-
-.size-large #title.not-empty,.size-large #title TextField
-{
-    height:64;
-}
-
-.size-huge #title.not-empty,.size-huge #title TextField
-{
-    height:84;
 }
 
 * Label:hover
