--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/StickyNote.uxml
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/StickyNote.uxml
@@ -1,8 +1,7 @@
 <UXML xmlns:ui="UnityEngine.Experimental.UIElements">
   <ui:VisualElement name="node-border" pickingMode="Ignore" >
+    <ui:Label name="title" />
     <ui:TextField name="title-field" />
-    <ui:Label name="title">
-    </ui:Label>
     <ui:Label name="contents">
       <ui:TextField name="contents-field" />
     </ui:Label>
