--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/StickyNote.uxml
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/StickyNote.uxml
@@ -1,4 +1,4 @@
-<UXML xmlns:ui="UnityEngine.Experimental.UIElements">
+<UXML xmlns:ui="UnityEngine.Experimental.UIElements" xmlns:vfx="UnityEditor.VFX.UI">
   <ui:VisualElement name="node-border" pickingMode="Ignore" >
     <ui:Label name="title" />
     <ui:TextField name="title-field" />
@@ -6,22 +6,5 @@
       <ui:TextField name="contents-field" />
     </ui:Label>
   </ui:VisualElement>
-  <ui:VisualElement name="selection-border" pickingMode="Ignore" />
-  <ui:VisualElement name="resizable" pickingMode="Ignore">
-    <ui:VisualElement name="left" pickingMode="Ignore" >
-      <ui:VisualElement name="top-left-resize"/>
-      <ui:VisualElement name="left-resize"/>
-      <ui:VisualElement name="bottom-left-resize"/>
-    </ui:VisualElement>
-    <ui:VisualElement name="middle" pickingMode="Ignore" >
-      <ui:VisualElement name="top-resize"/>
-      <ui:VisualElement name="middle-center" pickingMode="Ignore" />
-      <ui:VisualElement name="bottom-resize"/>
-    </ui:VisualElement>  
-    <ui:VisualElement name="right"  pickingMode="Ignore" >
-      <ui:VisualElement name="top-right-resize"/>
-      <ui:VisualElement name="right-resize"/>
-      <ui:VisualElement name="bottom-right-resize"/>
-    </ui:VisualElement>
-  </ui:VisualElement>
+  <vfx:ResizableElement pickingMode="Ignore" />
 </UXML>
