--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/StickyNote.uxml
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/StickyNote.uxml
@@ -6,5 +6,6 @@
       <ui:TextField name="contents-field" />
     </ui:Label>
   </ui:VisualElement>
+  <ui:VisualElement name="selection-border" pickingMode="Ignore" />
   <vfx:ResizableElement pickingMode="Ignore" />
 </UXML>
