--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/StickyNote.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/StickyNote.uss
@@ -41,6 +41,24 @@
 }
 
 
+/* Themes*/
+
+.theme-black *
+{
+    text-color:#AB924B;
+}
+
+.theme-black > #node-border
+{
+    border-color:#AB924B;
+    border-radius:8;
+}
+.sticky-note.theme-black, .theme-black TextField
+{
+    background-color: #362905;
+}
+
+
 * > #node-border
 {
     flex:1;
@@ -182,17 +200,8 @@
     background-image:none;
 }
 
-/* Themes*/
 
-.sticky-note.theme-black *
-{
-    text-color:#999999;
-}
-
-.theme-black > #node-border
-{
-    border-color:#393939;
-}
+/*
 
 .sticky-note.theme-orange, .theme-orange TextField
 {
@@ -229,3 +238,4 @@
 {
     text-color:#FBCBF4;
 }
+*/
