edit element for unified operators.

--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXOperator.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXOperator.uss
@@ -32,6 +32,11 @@ OperandInfo VFXStringField .textfield
 {
     flex:1;
 }
+
+OperandInfo Label
+{
+    flex:1;
+}
 OperandInfo .PopupButton
 {
     width:50;
