--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXControlsLight.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXControlsLight.uss
@@ -23,3 +23,15 @@ VFXFloatField:focus
 {
 	background-image: resource("Builtin Skins/LightSkin/Images/mini popup focus.png");
 }
+
+Button.MiniDropDown {
+	background-image: resource("Builtin Skins/LightSkin/Images/mini pulldown.png");
+}
+
+Button.MiniDropDown:hover {
+	background-image: resource("Builtin Skins/LightSkin/Images/mini pulldown focus.png");
+}
+
+Button.MiniDropDown:hover:active {
+	background-image: resource("Builtin Skins/LightSkin/Images/mini pulldown act.png");
+}
