--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXComponentBlackboardSection.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXComponentBlackboardSection.uss
@@ -1,7 +1,51 @@
-VFXComponentBlackboardSection, #component-container
+VFXComponentBoard.graphElement
+{
+    position-type:Absolute;
+    
+    background-color: #2b2b2b;
+    border-color: #191919;
+
+    padding-left:0;
+    padding-right:0;
+    padding-top:0;
+    padding-bottom:0;
+}
+
+ *
+{
+    font-size:11;
+}
+
+VFXComponentBoard, #component-container
 {
     flex-direction:column;
     align-items:stretch;
+}
+
+#header {
+    flex-direction: row;
+    align-items: stretch;
+    background-color: #393939;
+    border-bottom-width: 1;
+    border-color: #212121;
+    border-top-right-radius: 4;
+    border-top-left-radius: 4;
+    padding-left: 1;
+    padding-top: 4;
+    padding-bottom: 2;
+}
+#header > #labelContainer {
+    flex: 1;
+    flex-direction: column;
+    align-items: stretch;
+}
+#header > #labelContainer > #titleLabel {
+    font-size : 14;
+    text-color: #c1c1c1;
+}
+#header > #labelContainer > #subTitleLabel {
+    font-size: 11;
+    text-color: #606060;
 }
 
 #attach
@@ -42,6 +86,10 @@ VFXComponentBlackboardSection, #component-container
 }
 #toolbar Button#play #icon
 {
+    image:resource("VFX/Pause");
+}
+#toolbar Button#play.paused #icon
+{
     image:resource("VFX/Play");
 }
 #toolbar Button#step #icon
@@ -72,5 +120,9 @@ VFXComponentBlackboardSection, #component-container
 
 #play-rate-container #play-rate-menu
 {
-    width:80;
+    padding-left:0;
+    border-left:0;
+    border-top:0;
+    width:40;
+    height:16;
 }
