--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/PropertyRM.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/PropertyRM.uss
@@ -54,7 +54,7 @@
 	background-image:resource("vfx/spaceglobal");
 }
 
-.propertyrm > VFXFloatField
+.propertyrm > FloatField
 {
 	margin-bottom:3;
 }
@@ -85,7 +85,7 @@
 	padding-left:0;
 }
 
-.propertyrm .fieldContainer, .propertyrm VFXFloatField
+.propertyrm .fieldContainer, .propertyrm FloatField
 {
     -align-items: center;
     flex-direction:row;
@@ -146,12 +146,12 @@ ColorPropertyRM .colorcontainer, Vector3PropertyRM .colorcontainer
     margin-bottom:2;
 }
 
-ColorPropertyRM VFXFloatField
+ColorPropertyRM FloatField
 {
 	flex:1;
 }
 
-FloatPropertyRM VFXFloatField
+FloatPropertyRM FloatField
 {
     align-self:flex-end;
     flex:1;
@@ -194,7 +194,7 @@ Matrix4x4PropertyRM.propertyrm > .fieldContainer
 }
 
 
-.propertyrm #indeterminate, .propertyrm #indeterminate
+.propertyrm #indeterminate
 {
     flex:1;
 	slice-left: 3;
@@ -205,4 +205,9 @@ Matrix4x4PropertyRM.propertyrm > .fieldContainer
     margin-bottom:0;
     margin-left:0;
     margin-right:0;
+}
+
+.propertyrm .sliderField #indeterminate
+{
+    flex:0;
 }
