--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXTypeColor.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXTypeColor.uss
@@ -13,7 +13,7 @@
 
 .port.typeGradient
 {
-    port-color: #84e4e7;
+    port-color: #FFAA6B;
 }
 
 .port.typeobject
@@ -54,7 +54,7 @@
 }
 .port.typeanimationcurve
 {
-    port-color : #84e4e7;
+    port-color : #FFAA6B;
 }
 .port.typeGPUEvent
 {
