--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXComponentBlackboardSection.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXComponentBlackboardSection.uss
@@ -9,6 +9,9 @@ VFXComponentBoard.graphElement
     padding-right:0;
     padding-top:0;
     padding-bottom:0;
+
+    min-width:140;
+    min-height:100;
 }
 
  *
