--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXOperator.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXOperator.uss
@@ -1,6 +1,6 @@
 VFXOperatorUI.node #middle
 {
-    flex:1;
+    flex:1 0;
     background-color:#363636;
 
 }
@@ -26,11 +26,11 @@ OperandInfo *
 }
 OperandInfo VFXStringField
 {
-    flex:1;
+    flex:1 0;
 }
 OperandInfo VFXStringField .textfield
 {
-    flex:1;
+    flex:1 0;
 }
 OperandInfo .PopupButton
 {
@@ -40,7 +40,7 @@ OperandInfo .PopupButton
 
 VFXUnifiedOperatorEdit OperandInfo Label
 {
-    flex:1;
+    flex:1 0;
 }
 VFXUnifiedOperatorEdit OperandInfo .PopupButton
 {
@@ -59,7 +59,7 @@ VFXUnifiedOperatorEdit OperandInfo .PopupButton
 
 #edit-container.ReorderableList > #ListContainer
 {
-    flex:1;
+    flex:1 0;
 }
 
 .VFXUniformOperatorEdit#edit-container
