--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXNode.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXNode.uss
@@ -5,7 +5,7 @@
 
 .VFXNodeUI.node #node-border > #title > #title-label
 {
-    flex:1 0;
+    flex:1 0 auto;
 }
 
 .VFXNodeUI.superCollapsed
@@ -68,7 +68,7 @@ width:-1;
     padding-top:0;
     padding-bottom:0;
     background-color:rgba(0,0,0,0);
-    flex:1 0;
+    flex:1 0 auto;
 }
 .VFXNodeUI.superCollapsed #contents > #top > #divider
 {
@@ -77,7 +77,7 @@ width:-1;
 }
 .VFXNodeUI.superCollapsed #contents > #top > #middle
 {
-    flex:0;
+    flex:0 0 auto;
 }
 .VFXNodeUI.superCollapsed #contents > #top > #output
 {
@@ -86,7 +86,7 @@ width:-1;
     position-bottom:0;
     position-right:1;
     flex-grow:0;
-    flex:0;
+    flex:0 0 auto;
     width:20;
     background-color:rgba(0,0,0,0);
 }
