--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXComponentBlackboardSection.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXComponentBlackboardSection.uss
@@ -23,6 +23,7 @@ VFXComponentBoard, #component-container
 {
     flex-direction:column;
     align-items:stretch;
+    overflow:hidden;
 }
 
 #header {
