--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXNode.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXNode.uss
@@ -1,3 +1,28 @@
+#divider {
+    background-color: rgba(35,35,35,0.8);
+    border-color: rgba(35,35,35,0.8);
+}
+
+#divider.horizontal {
+    height:0.01;
+    border-bottom-width: 1;
+}
+
+#divider.horizontal.hidden {
+    height:0;
+    border-bottom-width: 0;
+}
+
+#divider.vertical {
+    width:0.01;
+    border-right-width: 1;
+}
+
+#divider.vertical.hidden {
+    width:0;
+    border-right-width: 0;
+}
+
 .VFXNodeUI.node #node-border > #title
 {
     justify-content:flex-start;
@@ -14,11 +39,44 @@ height:30;
 width:-1;
 }
 
-
-.VFXNodeUI #settings
+.VFXNodeUI #contents
 {
     background-color: rgba(63,63,63,0.8);
 }
+
+.VFXNodeUI.node #contents > #top > #input
+{
+    background-color: rgba(0,0,0,0.0);
+}
+
+
+.VFXNodeUI #settings
+{
+    margin-top:6;
+    margin-bottom:6;
+    margin-right:4;
+    margin-left:16; /* this is meant to compense for data anchors connector, so that settings labels are aligned with input labels. */
+    padding-right:4;
+    overflow:hidden;
+}
+
+.VFXNodeUI.collapsed #settings
+{
+    margin-top:0;
+    margin-bottom:0;
+}
+.VFXNodeUI.VFXNodeUI.superCollapsed #settings
+{
+    margin-top:0;
+    margin-bottom:0;
+}
+
+.VFXNodeUI #settings.nosettings
+{
+    margin-top:0;
+    margin-bottom:0;
+}
+
 .VFXNodeUI.collapsed #settings
 {
     max-height:0;
@@ -34,7 +92,13 @@ width:-1;
 
 .VFXNodeUI.node #contents > #top > #input
 {
-    padding-bottom:8;
+    padding-top:6;
+    padding-bottom:6;
+}
+
+.VFXNodeUI.node.superCollapsed #contents
+{
+    background-color: rgba(0,0,0,0);
 }
 
 .VFXNodeUI.node.superCollapsed #settings
@@ -128,6 +192,7 @@ width:-1;
 .VFXNodeUI.superCollapsed .propertyrm
 {
     max-width:0;
+    overflow: hidden;
 }
 .VFXNodeUI.superCollapsed.node .mainContainer #left
 {
