--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/VFXComponentBoard.uxml
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/VFXComponentBoard.uxml
@@ -1,10 +1,12 @@
 <UXML xmlns:ui="UnityEngine.Experimental.UIElements" xmlns:uie="UnityEditor.Experimental.UIElements" xmlns:vfx="UnityEditor.VFX.UI">
-    <ui:VisualElement name="header" pickingMode="Ignore">
-        <ui:VisualElement name="labelContainer" pickingMode="Ignore">
-            <ui:Label name="titleLabel" text="Attach To VisualEffect" />
-            <ui:Label name="subTitleLabel" text="Activate Component specific features" />
-        </ui:VisualElement>
-    </ui:VisualElement>
+
+  <ui:VisualElement name="header" pickingMode="Ignore">
+      <ui:VisualElement name="labelContainer" pickingMode="Ignore">
+          <ui:Label name="titleLabel" text="Attach To VisualEffect" />
+          <ui:Label name="subTitleLabel" text="Activate Component specific features" />
+      </ui:VisualElement>
+  </ui:VisualElement>
+  <ui:ScrollView class="stretchContentWidth">
     <ui:VisualElement name="attach-container">
         <ui:Button name="attach" text="Attach" />
         <ui:Label name="component-path" text="" pickingMode="Ignore"/>
@@ -36,7 +38,13 @@
                 <uie:IntegerField name="play-rate-field"/>
                 <ui:Button name="play-rate-menu" text="Set" class="MiniDropDown"/>
             </ui:VisualElement>
+          <ui:VisualElement>
+            <ui:Label text="Events" />
+            <ui:VisualElement name="events-container" pickingMode="Ignore" >
+            </ui:VisualElement>
+          </ui:VisualElement>
         </ui:VisualElement>
-    </ui:VisualElement>
+      </ui:VisualElement>
+  </ui:ScrollView>
     <vfx:ResizableElement pickingMode="Ignore" />
 </UXML>
