Hugo style expanded parameternodes.

--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/VFXParameter.uxml
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/uxml/VFXParameter.uxml
@@ -1,8 +1,13 @@
 <UXML xmlns:ui="UnityEngine.Experimental.UIElements">
   <ui:VisualElement name="node-border" pickingMode="Ignore" >
     <ui:VisualElement name="title" pickingMode="Ignore" >
-      <ui:Image name="exposed-icon" />
-      <ui:Label name="title-label" text="" />
+      <ui:VisualElement name="pill" pickingMode="Ignore" >
+        <ui:Image name="exposed-icon" pickingMode="Ignore"/>
+        <ui:Label name="title-label" text=""  pickingMode="Ignore"/>
+        <ui:VisualElement name="super-collapse-button" text="">
+          <ui:VisualElement name="icon" text="" pickingMode="Ignore"/>
+        </ui:VisualElement>
+      </ui:VisualElement>
     </ui:VisualElement>
     <ui:VisualElement name="contents" pickingMode="Ignore">
       <ui:VisualElement name="top" pickingMode="Ignore">
