--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXParameter.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXParameter.uss
@@ -2,11 +2,11 @@
 VFXParameterUI.node > #node-border > #title
 {
     font-size:11;
-    background-color:rgba(0,0,0,0);
     height:-1;
     padding-left:8;
 }
-VFXParameterUI.node > #node-border > #title > #title-label
+
+VFXParameterUI.node.superCollapsed > #node-border > #title > #title-label
 {
     margin-right:0;
     margin-left:0;
@@ -19,28 +19,86 @@ VFXParameterUI.node > #node-border > #title > #title-label
     font-size:11;
 }
 
-VFXParameterUI.node > #node-border
-{
-    flex-direction:row;
-    flex:1 0 auto;
-    border-radius:8;
-    background-image: resource("GraphView/Nodes/BlackboardFieldPillBackground.png");
-}
-
-VFXParameterUI.node > #selection-border
+VFXParameterUI.node > #node-border > #title > #pill
 {
     border-radius:10;
+    background-image: resource("GraphView/Nodes/BlackboardFieldPillBackground.png");
+    flex-direction:row;
+    padding-left:8;
+    -margin-left:8;
+    margin-right:8;
+    margin-top:8;
+    margin-bottom:8;
 }
+VFXParameterUI.node.superCollapsed > #node-border
+{
+    border-color:rgba(0,0,0,0);
+}
+
+VFXParameterUI.node.superCollapsed > #selection-border
+{
+    margin-top:10;
+    margin-bottom:10;
+    margin-left:10;
+    margin-right:10;
+    border-radius:12;
+}
+
+VFXParameterUI.node.superCollapsed > #node-border > #title
+{
+    background-color:rgba(0,0,0,0);
+}
+
+VFXParameterUI.node.superCollapsed > #node-border > #contents
+{
+    position-type:Absolute;
+    position-right:0;
+    position-left:0;
+    position-top:0;
+    position-bottom:0;
+}
+
+VFXParameterUI.node.superCollapsed > #node-border > #contents > #top > #output
+{
+    justify-content:space-around;
+    background-color:rgba(0,0,0,0);
+    align-items:flex-end;
+}
+
+VFXParameterUI.node.superCollapsed > #node-border > #contents .VFXDataAnchor.Output
+{
+    height:0;
+    min-height:0;
+    overflow:hidden;
+    position-type:Absolute;
+    position-top:22; /*hard coding the position so that edge are at the right height*/
+}
+
+VFXParameterUI.node.superCollapsed > #node-border > #contents .VFXDataAnchor.Output.first
+{
+    height:20;
+    width:20;
+    position-type:Relative;
+    position-top:0;
+}
+
+VFXParameterUI.node.superCollapsed > #node-border > #contents .VFXDataAnchor.Output.first #type
+{
+    width:0;
+}
+VFXParameterUI.node.superCollapsed > #node-border > #contents .VFXDataAnchor.Output.first #icon
+{
+    width:0;
+}
+VFXParameterUI.node.superCollapsed > #node-border > #contents .VFXDataAnchor.Output.first #connector
+{
+    margin-right:10;
+}
+
 
 VFXParameterUI.node > #node-border > #contents > #top
 {
     flex:1 0 auto;
-}
-
-VFXParameterUI.node > #node-border > #contents #output
-{
-    justify-content:center;
-    background-color:rgba(0,0,0,0);
 }
 
 VFXParameterUI.node > #node-border > #contents #divider
@@ -50,18 +108,38 @@ VFXParameterUI.node > #node-border > #contents #divider
     border-bottom-width:0;
 }
 
-VFXParameterUI.node > #node-border > #title > #exposed-icon
+VFXParameterUI.node > #node-border > #title > #pill > #exposed-icon
 {
     align-self:center;
 }
 
-VFXParameterUI.node.exposed > #node-border > #title > #exposed-icon
+VFXParameterUI.node.exposed > #node-border > #title > #pill > #exposed-icon
 {
     image:resource("VFX/exposed dot");
     width:6;
     height:6;
 }
-#line
-{
-    background-color:#999;
+
+.node.superCollapsed #super-collapse-button > #icon {
+    background-image: resource("GraphView/Nodes/NodeChevronLeft.png");
+}
+
+.node #super-collapse-button > #icon {
+    background-image : resource("GraphView/Nodes/NodeChevronDown.png");
+}
+
+#super-collapse-button {
+    width:20;
+    margin-right:18;
+    flex-direction:column;
+    justify-content:center;
+    padding-left:4;
+}
+
+#super-collapse-button >#icon {
+    background-size: 2;
+    width:12;
+    height:12;
+    align-self:center;
+    opacity: 0.5;
 }
