--- a/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXParameter.uss
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Editor/Resources/VFXParameter.uss
@@ -30,6 +30,25 @@ VFXParameterUI.node > #node-border > #title > #pill
     margin-top:8;
     margin-bottom:8;
 }
+
+VFXParameterUI.node.hovered > #selection-border
+{
+    background-color:rgba(68,192,255,0.4);
+    border-color:rgba(68,192,255,1);
+    border-left-width:2;
+    border-right-width:2;
+    border-top-width:2;
+    border-bottom-width:2;
+}
+
+VFXParameterUI.node:hover > #selection-border
+{
+    border-color:rgba(68,192,255,1);
+    border-left-width:1;
+    border-right-width:1;
+    border-top-width:1;
+    border-bottom-width:1;
+}
 VFXParameterUI.node.superCollapsed > #node-border
 {
     border-color:rgba(0,0,0,0);
