updates to widget

--- a/TestProjects/UniversalGraphicsTest/Assets/CommonAssets/Converter/converter_widget.uxml
+++ b/TestProjects/UniversalGraphicsTest/Assets/CommonAssets/Converter/converter_widget.uxml
@@ -1,11 +1,16 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:VisualElement style="flex-grow: 1; height: 82px;">
+    <ui:VisualElement style="flex-grow: 1; height: 114px;">
         <ui:VisualElement style="height: 32px; width: 495px; flex-direction: row;">
-            <ui:Toggle />
+            <ui:Toggle name="converterEnabled" />
             <ui:Label name="converterName" text="Name Of The Converter" style="width: 143px; -unity-text-align: middle-center;" />
             <ui:VisualElement name="converterProgressBar" style="height: 32px; width: 294px;" />
             <ui:VisualElement style="width: 219px; flex-direction: row-reverse; flex-grow: 1;" />
-            <ui:Label name="converterInfo" text="100 Items" style="flex-grow: 1; -unity-text-align: middle-right;" />
+            <ui:Label name="converterStats" text="100 Items" style="flex-grow: 1; -unity-text-align: middle-right;" />
+        </ui:VisualElement>
+        <ui:VisualElement style="height: 27px; width: 499px; flex-direction: row;">
+            <ui:Label text="In progress..." name="converterInfo" style="-unity-text-align: middle-left;" />
+            <ui:VisualElement style="flex-grow: 1;" />
+            <ui:Label text="30 Seconds" name="converterTime" style="-unity-text-align: middle-left;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
