--- a/TestProjects/UniversalGraphicsTest/Assets/CommonAssets/Converter/converter_editor.uxml
+++ b/TestProjects/UniversalGraphicsTest/Assets/CommonAssets/Converter/converter_editor.uxml
@@ -1,14 +1,16 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:VisualElement style="height: 25px; width: 1012px;">
         <ui:Label text="Render Pipeline Converter" style="-unity-font-style: bold; font-size: 16px;" />
-        <ui:TextElement text="The Render Pipeline Conversion Wizard is meant to help Convert projects from built-in to Universal Render Pipeline." style="-unity-font-style: normal;" />
-        <ui:VisualElement style="flex-direction: row; height: 50px; width: 1040px;">
-            <ui:DropdownField index="-1" style="width: 209px; height: 27px;" />
-        </ui:VisualElement>
     </ui:VisualElement>
-    <ui:VisualElement style="height: 655px; width: 1043px;">
-        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="convertersScrollView" style="flex-grow: 1;">
-            <ui:ListView focusable="true" name="converterListView" style="flex-grow: 1; height: 405px; width: 1036px;" />
-        </ui:ScrollView>
+    <ui:TextElement text="The Render Pipeline Conversion Wizard is meant to help Convert projects from built-in to Universal Render Pipeline." style="height: 46px; width: 1038px;" />
+    <ui:VisualElement style="flex-direction: row;">
+        <uie:EnumField style="height: 14px; width: 174px;" />
     </ui:VisualElement>
+    <ui:VisualElement style="flex-direction: row;">
+        <ui:DropdownField index="-1" style="height: 27px; width: 208px;" />
+        <ui:VisualElement style="flex-grow: 1;" />
+    </ui:VisualElement>
+    <ui:Label text="The Render Pipeline Conversion Wizard is meant to help Convert projects from built-in to Universal Render Pipeline." />
+    <uie:EnumField style="height: 23px; width: 248px;" />
+    <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="convertersScrollView" style="height: 611px; width: 1044px;" />
 </ui:UXML>
