--- a/com.unity.shadergraph/Editor/Resources/Styles/Blackboard.uss
+++ b/com.unity.shadergraph/Editor/Resources/Styles/Blackboard.uss
@@ -261,6 +261,20 @@
 #SGBlackboardRow > .mainContainer > #root > #propertyViewContainer {
 }
 
+#SGBlackboardRow.hovered #pill #selection-border
+{
+    background-color:rgba(68,192,255,0.4);
+    border-color: #44C0FF;
+    border-left-width: 2px;
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    left: 1px;
+    right: 1px;
+    top: 1px;
+    bottom: 1px;
+}
+
 #BlackboardPropertyView {
     flex: 1 0 0;
     flex-direction: row;
